--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-python-telegram-bot==21.4
-openai==1.51.2
+python-telegram-bot==20.7
+opencv-python-headless==4.10.0.84
 python-dotenv==1.0.1
-opencv-python==4.10.0.84
 numpy==1.26.4
+openai>=1.45.0
